force-app/main/default/objects/Payment_Fees_Management__c/Payment_Fees_Management__c.object-meta.xml
<CustomObject>
    <label>Payment Fees Management</label>
    <nameField>
        <label>Payments Fee Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Fees Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>