force-app/main/default/objects/Payment_Fees_Management__c/fields/Account_Set_up_Fee__c.field-meta.xml
<CustomField>
    <fullName>Account_Set_up_Fee__c</fullName>
    <label>Account Set up Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>