force-app/main/default/objects/Payment_Fees_Management__c/fields/Account_Updater_Per_Success__c.field-meta.xml
<CustomField>
    <fullName>Account_Updater_Per_Success__c</fullName>
    <label>Account Updater (Per Success)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>