force-app/main/default/objects/Payment_Fees_Management__c/fields/ACH_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>ACH_Processing_Fee__c</fullName>
    <label>ACH Processing Transaction Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>