force-app/main/default/objects/Payment_Fees_Management__c/fields/Amex_MID_Qualified_Tier__c.field-meta.xml
<CustomField>
    <fullName>Amex_MID_Qualified_Tier__c</fullName>
    <label>Amex Mid-Qualified Discount Rate (%)</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>