force-app/main/default/objects/Payment_Fees_Management__c/fields/Annual_PCI_Validation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_PCI_Validation_Fee__c</fullName>
    <label>Annual PCI Validation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>