force-app/main/default/objects/Payment_Fees_Management__c/fields/AVS_Fee__c.field-meta.xml
<CustomField>
    <fullName>AVS_Fee__c</fullName>
    <label>AVS Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>