force-app/main/default/objects/Payment_Fees_Management__c/fields/Chargeback_Fee_Per_Item_Fee__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Fee_Per_Item_Fee__c</fullName>
    <label>Chargeback Fee (Per Item Fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>