force-app/main/default/objects/Payment_Fees_Management__c/fields/Chargeback_Portal_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Portal_Monthly_Fee__c</fullName>
    <label>Chargeback Portal Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>