force-app/main/default/objects/Payment_Fees_Management__c/fields/EBT_Monthly_Access_Fee__c.field-meta.xml
<CustomField>
    <fullName>EBT_Monthly_Access_Fee__c</fullName>
    <label>EBT- Monthly Access Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>