force-app/main/default/objects/Payment_Fees_Management__c/fields/Help_Desk_Fee__c.field-meta.xml
<CustomField>
    <fullName>Help_Desk_Fee__c</fullName>
    <label>Help Desk Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>