force-app/main/default/objects/Payment_Fees_Management__c/fields/Merchant_Online_Reporting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Online_Reporting_Fee__c</fullName>
    <label>Merchant Online Reporting Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>