force-app/main/default/objects/Payment_Fees_Management__c/fields/Pass_Thru_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pass_Thru_Discount_Rate__c</fullName>
    <label>Bankcard Pass Thru + Discount Rate (%)</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>