force-app/main/default/objects/Payment_Fees_Management__c/fields/PCI_Non_Compliance_Fee__c.field-meta.xml
<CustomField>
    <fullName>PCI_Non_Compliance_Fee__c</fullName>
    <label>PCI Non-Compliance Fee $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>