force-app/main/default/objects/Payment_Fees_Management__c/fields/Visa_MC_Discover_Qualified_Tier__c.field-meta.xml
<CustomField>
    <fullName>Visa_MC_Discover_Qualified_Tier__c</fullName>
    <label>Bankcard Qualified Discount Rate %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>